# mhef-pp

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py
.github/scripts/: conan-profile.sh
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  lint.cmake  prelude.cmake  pythonpath.cmake  variables.cmake
include/mhef-pp/: mhef-pp.hpp
python/: CMakeLists.txt  requirements.txt
python/source/: main.cpp
python/test/: test.py
source/: mhef-pp.cpp
test/: CMakeLists.txt
test/source/: mhef-pp_test.cpp
